--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "outDir": "dist",
     "rootDir": "./",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": [
+      "typings",
+      "node_modules/@types"
+    ]
   }
 }
